Does go to correct timing in audio, only on autoplay, but is stuck in a loop

--- a/app/(routes)/globals.css
+++ b/app/(routes)/globals.css
@@ -105,3 +105,14 @@ body {
 .episode-arrow.show {
   transform: translateX(0) rotate(180deg);
 }
+
+/* Searchbox */
+/* .results-wrapper, .result-wrapper, .result-wrapper div {
+  max-width: 100vw;
+  over
+} */
+
+.searchbox-top {
+  height: 80vh;
+  overflow-y: scroll;
+}
